# pkg/web/static/openapi.yaml
@@ -13,7 +13,7 @@ info:
   license:
     name: MIT Licensed
     url: https://github.com/trisacrypto/trisa/blob/main/LICENSE
-  version: v0.1.1
+  version: v0.23.0
 externalDocs:
   description: TRISA Developer Documentation
   url: https://trisa.dev
@@ -422,6 +422,11 @@ paths:
           schema:
             type: string
             format: UUID
+        - name: decrypt
+          in: query
+          description: if specified, Envoy will decrypt the secure envelope before returning the response in the clear. This operation will only succeed if the keys are available for decryption
+          schema:
+            type: boolean
         - name: page_size
           in: query
           schema:
@@ -437,6 +442,12 @@ paths:
       responses:
         '200':
           description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/EnvelopesList'
+        '206':
+          description: Not all enveloeps were able to be decrypted
           content:
             application/json:
               schema:
@@ -465,9 +476,20 @@ paths:
           schema:
             type: string
             format: ULID
+        - name: decrypt
+          in: query
+          description: if specified, Envoy will decrypt the secure envelope before returning the response in the clear. This operation will only succeed if the keys are available for decryption
+          schema:
+            type: boolean
       responses:
         '200':
           description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SecureEnvelope'
+        '206':
+          description: Partial content returned (could not decrypt secure envelope)
           content:
             application/json:
               schema:
@@ -871,6 +893,38 @@ paths:
           description: Invalid input
         '422':
           description: Validation exception or missing field
+  /v1/counterparties/search:
+    get:
+      tags:
+        - counterparty
+      summary: Search for a counterparty by name
+      description: Performs a fuzzy string matching search of the query against all of the counterparty names in the database, returning a ranked list of search results that can be limited by the number of items returned.
+      security:
+        - bearer-auth: [ ]
+      parameters:
+        - name: query
+          in: query
+          description: Search query to execute against counterparty names
+          required: true
+          schema:
+            type: string
+        - name: limit
+          in: query
+          description: Limit the number of search results to return in the query
+          schema:
+            type: integer
+            default: 10
+            minimum: 0
+            maximum: 50
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CounterpartyList'
+        '400':
+          description: Invalid input
   /v1/counterparties/{counterpartyID}:
     get:
       tags:
@@ -1033,61 +1087,61 @@ paths:
                 $ref: '#/components/schemas/User'
         '404':
           description: User not found
-      put:
-        tags:
-          - user
-        summary: Updates a user record
-        description: Update a user record (does not patch, all fields are required)
-        operationId: updateUser
-        security:
-          - bearer-auth: [ ]
-        parameters:
-          - name: userID
-            in: path
-            description: ID of user to update
-            required: true
+    put:
+      tags:
+        - user
+      summary: Updates a user record
+      description: Update a user record (does not patch, all fields are required)
+      operationId: updateUser
+      security:
+        - bearer-auth: [ ]
+      parameters:
+        - name: userID
+          in: path
+          description: ID of user to update
+          required: true
+          schema:
+            type: string
+            format: ULID
+      requestBody:
+        description: Updated user record
+        content:
+          application/json:
             schema:
-              type: string
-              format: ULID
-        requestBody:
-          description: Updated user record
+              $ref: '#/components/schemas/User'
+        required: true
+      responses:
+        '200':
+          description: Successful operation
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/User'
+        '400':
+          description: Invalid input
+        '422':
+          description: Validation exception or missing field
+    delete:
+      tags:
+        - user
+      summary: Deletes a user
+      description: Deletes a user
+      operationId: deleteUser
+      security:
+        - bearer-auth: [ ]
+      parameters:
+        - name: userID
+          in: path
+          description: ID of user to delete
           required: true
-        responses:
-          '200':
-            description: Successful operation
-            content:
-              application/json:
-                schema:
-                  $ref: '#/components/schemas/User'
-          '400':
-            description: Invalid input
-          '422':
-            description: Validation exception or missing field
-        delete:
-          tags:
-            - user
-          summary: Deletes a user
-          description: Deletes a user
-          operationId: deleteUser
-          security:
-            - bearer-auth: [ ]
-          parameters:
-            - name: userID
-              in: path
-              description: ID of user to delete
-              required: true
-              schema:
-                type: string
-                format: ULID
-          responses:
-            '200':
-              description: Successful operation
-            '404':
-              description: User not found
+          schema:
+            type: string
+            format: ULID
+      responses:
+        '200':
+          description: Successful operation
+        '404':
+          description: User not found
   /v1/users/{userID}/password:
     post:
       tags:
